--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,8 +1,20 @@
 {
   "$schema": "https://json.schemastore.org/prettierrc",
-  "semi": false,
   "tabWidth": 2,
   "singleQuote": true,
   "printWidth": 100,
-  "trailingComma": "none"
+  "trailingComma": "all",
+  "plugins": ["prettier-plugin-css-order"],
+  "overrides": [
+    {
+      "files": "*.cjs",
+      "options": { "parser": "babel" }
+    },
+    {
+      "files": "*.svg",
+      "options": {
+        "parser": "html"
+      }
+    }
+  ]
 }
