--- a/package.json
+++ b/package.json
@@ -26,27 +26,28 @@
     "vue": "^3.4.15"
   },
   "devDependencies": {
-    "@histoire/plugin-vue": "^0.17.8",
+    "@histoire/plugin-vue": "^0.17.9",
     "@playwright/test": "^1.41.1",
-    "@rushstack/eslint-patch": "^1.7.0",
+    "@rushstack/eslint-patch": "^1.7.1",
     "@testing-library/cypress": "^10.0.1",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@tsconfig/node20": "^20.1.2",
     "@types/jsdom": "^21.1.6",
-    "@types/node": "^20.11.5",
+    "@types/node": "^20.11.6",
     "@vitejs/plugin-vue": "^5.0.3",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/compiler-dom": "^3.4.15",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
-    "@vue/test-utils": "^2.4.3",
+    "@vue/test-utils": "^2.4.4",
     "@vue/tsconfig": "^0.5.1",
     "cypress": "^13.6.3",
+    "cypress-real-events": "^1.11.0",
     "cypress-visual-regression": "^4.0.0",
     "eslint": "^8.56.0",
     "eslint-plugin-vue": "^9.20.1",
-    "histoire": "^0.17.8",
-    "husky": "^8.0.3",
+    "histoire": "^0.17.9",
+    "husky": "^9.0.5",
     "jsdom": "^24.0.0",
     "lint-staged": "^15.2.0",
     "prettier": "^3.2.4",
