feat: add `glm-dropdown-menu` component

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue": "^3.4.15"
   },
   "devDependencies": {
+    "@csstools/postcss-sass": "^5.1.1",
     "@histoire/plugin-vue": "^0.17.9",
     "@playwright/test": "^1.41.1",
     "@rushstack/eslint-patch": "^1.7.2",
@@ -33,7 +34,7 @@
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@tsconfig/node20": "^20.1.2",
     "@types/jsdom": "^21.1.6",
-    "@types/node": "^20.11.9",
+    "@types/node": "^20.11.15",
     "@vitejs/plugin-vue": "^5.0.3",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/compiler-dom": "^3.4.15",
@@ -41,15 +42,15 @@
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.4.4",
     "@vue/tsconfig": "^0.5.1",
-    "cypress": "^13.6.3",
+    "cypress": "^13.6.4",
     "cypress-real-events": "^1.11.0",
     "cypress-visual-regression": "^4.0.0",
     "eslint": "^8.56.0",
-    "eslint-plugin-vue": "^9.20.1",
+    "eslint-plugin-vue": "^9.21.1",
     "histoire": "^0.17.9",
-    "husky": "^9.0.6",
+    "husky": "^9.0.7",
     "jsdom": "^24.0.0",
-    "lint-staged": "^15.2.0",
+    "lint-staged": "^15.2.1",
     "prettier": "^3.2.4",
     "prettier-plugin-css-order": "^2.0.1",
     "sass": "^1.70.0",
