--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
+  "exports": {
+    ".": {
+      "import": "./dist/gleam-ui.js"
+    }
+  },
   "scripts": {
     "dev": "vite",
     "preview": "vite preview",
@@ -34,7 +39,7 @@
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@tsconfig/node20": "^20.1.2",
     "@types/jsdom": "^21.1.6",
-    "@types/node": "^20.11.15",
+    "@types/node": "^20.11.16",
     "@vitejs/plugin-vue": "^5.0.3",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue/compiler-dom": "^3.4.15",
@@ -48,7 +53,7 @@
     "eslint": "^8.56.0",
     "eslint-plugin-vue": "^9.21.1",
     "histoire": "^0.17.9",
-    "husky": "^9.0.7",
+    "husky": "^9.0.10",
     "jsdom": "^24.0.0",
     "lint-staged": "^15.2.1",
     "prettier": "^3.2.4",
@@ -56,6 +61,7 @@
     "sass": "^1.70.0",
     "typescript": "~5.3.3",
     "vite": "^5.0.12",
+    "vite-plugin-dts": "^3.7.2",
     "vitest": "^1.2.2",
     "vue-router": "^4.2.5",
     "vue-tsc": "^1.8.27"
