--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "exports": {
     ".": {
-      "import": "./dist/gleam-ui.js"
+      "import": "./dist/gleam-ui.js",
+      "require": "./dist/gleam-ui.umd.cjs",
+      "types": "./dist/types/index.d.ts"
     }
   },
   "scripts": {
@@ -15,6 +17,7 @@
     "test:e2e": "playwright test",
     "build": "vite build",
     "type:check": "vue-tsc --build --force",
+    "type:gen": "vue-tsc --project tsconfig.lib.json",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --ignore-path .gitignore",
     "lint:fix": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/",
@@ -24,7 +27,8 @@
     "story:preview": "histoire preview",
     "test:component": "cypress run",
     "test:open": "cypress open",
-    "test:component:open": "cypress open --component --browser chrome"
+    "test:component:open": "cypress open --component --browser chrome",
+    "release": "semantic-release"
   },
   "dependencies": {
     "@fontsource/source-sans-pro": "^5.0.8",
@@ -33,7 +37,6 @@
   "devDependencies": {
     "@csstools/postcss-sass": "^5.1.1",
     "@histoire/plugin-vue": "^0.17.9",
-    "@playwright/test": "^1.41.1",
     "@rushstack/eslint-patch": "^1.7.2",
     "@testing-library/cypress": "^10.0.1",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
@@ -59,9 +62,9 @@
     "prettier": "^3.2.4",
     "prettier-plugin-css-order": "^2.0.1",
     "sass": "^1.70.0",
+    "semantic-release": "^23.0.0",
     "typescript": "~5.3.3",
     "vite": "^5.0.12",
-    "vite-plugin-dts": "^3.7.2",
     "vitest": "^1.2.2",
     "vue-router": "^4.2.5",
     "vue-tsc": "^1.8.27"
