ci: add release

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,9 +1,10 @@
 {
   "branches": [
+    "master",
     {
-      "name": "master",
-      "prerelease": "alpha"
+      "name": "next",
+      "channel": "next",
+      "prerelease": "next"
     }
-  ],
-  "dryRun": true
+  ]
 }
