--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
 name: Build, Test & Deploy
 on:
   push:
-    branches: [master]
+    branches: [master, next]
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -50,6 +50,11 @@ jobs:
         run: pnpm build
       - name: Generate types
         run: pnpm type:gen
+      - name: Upload Library dist files
+        uses: actions/upload-artifact@v4
+        with:
+          name: gleam-ui
+          path: dist
 
   build-histoire:
     runs-on: ubuntu-latest
@@ -65,11 +70,6 @@ jobs:
         with:
           name: histoire
           path: .histoire
-      - name: Upload Histoire dist files
-        uses: actions/upload-artifact@v4
-        with:
-          name: histoire
-          path: .histoire
 
   publish:
     needs: [lint, component-tests, type-check, build]
@@ -79,6 +79,11 @@ jobs:
         uses: actions/checkout@v3
       - name: Install
         uses: ./.github/actions/install
+      - name: Download Library dist files
+        uses: actions/download-artifact@v4
+        with:
+          name: gleam-ui
+          path: dist
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
