--- a/package.json
+++ b/package.json
@@ -3,11 +3,19 @@
   "version": "0.0.0",
   "type": "module",
   "files": ["dist"],
+  "sideEffects": false,
+  "main": "./dist/gleam-ui.umd.cjs",
+  "module": "./dist/gleam-ui.js",
+  "types": "./dist/types/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/gleam-ui.js",
       "require": "./dist/gleam-ui.umd.cjs",
       "types": "./dist/types/index.d.ts"
+    },
+    "./style.css": {
+      "import": "./dist/style.css",
+      "require": "./dist/style.css"
     }
   },
   "scripts": {
@@ -30,8 +38,7 @@
     "release": "semantic-release"
   },
   "dependencies": {
-    "@fontsource/source-sans-pro": "^5.0.8",
-    "vue": "^3.4.18"
+    "@fontsource/source-sans-pro": "^5.0.8"
   },
   "devDependencies": {
     "@csstools/postcss-sass": "^5.1.1",
@@ -61,11 +68,15 @@
     "prettier": "^3.2.5",
     "prettier-plugin-css-order": "^2.0.1",
     "sass": "^1.70.0",
-    "semantic-release": "^23.0.0",
+    "semantic-release": "^23.0.2",
     "typescript": "~5.3.3",
-    "vite": "^5.0.12",
+    "vue": "^3.4.18",
+    "vite": "^5.1.1",
     "vitest": "^1.2.2",
     "vue-router": "^4.2.5",
     "vue-tsc": "^1.8.27"
+  },
+  "peerDependencies": {
+    "vue": "^3.0.0"
   }
 }
